--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -6,7 +6,7 @@
         position: relative;
         width: 100%;
         height: 100%;
-        background: url('/img/promo.jpg') center no-repeat ;
+        background: url(/img/promo.jpg) center no-repeat;
 
         &__img {
             width: 100%;
@@ -25,6 +25,12 @@
             font-size: 28px;
             border: 1px solid #EBF1FD;
             cursor: pointer;
+
+            &>a {
+                color: #FFFFFF;
+                font-family: $ff;
+                font-size: 28px;
+            }
         }
     }
     &-container {
