--- a/src/scss/blocks/_tab.scss
+++ b/src/scss/blocks/_tab.scss
@@ -46,11 +46,10 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                font-family: $ff;
                 text-align: center;
                 font-weight: 400;
                 font-size: 20px;
-                line-height: 130%;
+                line-height: 36px;
                 letter-spacing: $lc;
                 color: rgba(0, 0, 0, 0.5);
                 border-bottom: 1px solid $main-color;
@@ -61,6 +60,10 @@
                 &.active {
                     border: 1px solid $main-color;
                     border-bottom: none;
+                    font-weight: 400;
+                    font-size: 20px;
+                    line-height: 36px;
+                    letter-spacing: $lc;
                     color: #000000;
                 }
             }
