--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,12 +17,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Alice&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    font-weight: 400;
+    font-weight: 200;
     color: #333333;
 }
 
