--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -6,12 +6,36 @@
         position: relative;
         width: 100%;
         height: 100%;
-        background: url(/img/promo.jpg) center no-repeat;
 
         &__img {
+            position: relative;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.34);
+            overflow: hidden;
+
+            &-track {
+                display: flex;
+                transition: 1.5s;
+                color: rgba(0, 0, 0, 0.34);
+
+                &__item {
+                    background-image: rgba(0, 0, 0, 0.34);
+                }
+            }
+
+            &-prev {
+                position: absolute;
+                margin-left: 165px;
+                margin-top: 235px;
+                z-index: 1;
+            }
+
+            &-next {
+                position: absolute;
+                margin-left: 92em;
+                margin-top: 235px;
+                z-index: 1;
+            }
         }
 
         &__btn {
@@ -33,6 +57,7 @@
             }
         }
     }
+
     &-container {
         position: absolute;
         display: flex;
