--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -28,6 +28,8 @@
                 margin-left: 165px;
                 margin-top: 235px;
                 z-index: 1;
+                border: none;
+                background: none;
             }
 
             &-next {
@@ -35,6 +37,8 @@
                 margin-left: 92em;
                 margin-top: 235px;
                 z-index: 1;
+                border: none;
+                background: none;
             }
         }
 
