--- a/src/scss/blocks/_fourth.scss
+++ b/src/scss/blocks/_fourth.scss
@@ -94,8 +94,6 @@
                 }
             }
 
-
-
             &__img-one {
                 position: relative;
                 width: 540px;
@@ -111,8 +109,7 @@
                     position: absolute;
                     inset: 0;
                     opacity: 0;
-                    transition: 200ms opacity easy-in-out;
-                    transition-delay: 200ms;
+                    transition: 0.9s;
 
                     &>img {
                         display: block;
@@ -145,39 +142,157 @@
                         right: 0;
                     }
                 }
-            }    
+            }
+            
+            &__img-two {
+                position: relative;
+                width: 540px;
+                height: 100%;
 
-            //     &__prev {
-            //         position: absolute;
-            //         background: none;
-            //         border: none;
-            //         top: 24em;
-            //         left: 0;
-            //         cursor: pointer;
-            //         z-index: 1;
-            //     }
+                &>ul {
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                }
 
-            //     &__next {
-            //         position: absolute;
-            //         background: none;
-            //         border: none;
-            //         top: 24em;
-            //         right: 0;
-            //         cursor: pointer;
-            //         z-index: 1;                
-            //     }
+                &-item {
+                    position: absolute;
+                    inset: 0;
+                    opacity: 0;
+                    transition: 0.9s;
 
-            //     &__track {
-            //         display: flex;
-            //         transition: 1.5s;
-            //     }
+                    &>img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        object-position: center;
+                    }
+                }
 
-            //     &-item {
-            //         width: 540px;
-            //         background-image: rgba(0, 0, 0, 0.34);
-            //     }
-            // 
+                &-item[data-active] {
+                    opacity: 1;
+                    z-index: 1;
+                    transition-delay: 0ms;
+                }
+
+                &-btn {
+                    position: absolute;
+                    z-index: 2;
+                    background: none;
+                    border: none;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    cursor: pointer;
+
+                    &.prev {
+                        left: 0;
+                    }
+                    &.next {
+                        right: 0;
+                    }
+                }
+            }
+            
+            &__img-three {
+                position: relative;
+                width: 540px;
+                height: 100%;
+
+                &>ul {
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                }
+
+                &-item {
+                    position: absolute;
+                    inset: 0;
+                    opacity: 0;
+                    transition: 0.9s;
+
+                    &>img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        object-position: center;
+                    }
+                }
+
+                &-item[data-active] {
+                    opacity: 1;
+                    z-index: 1;
+                    transition-delay: 0ms;
+                }
+
+                &-btn {
+                    position: absolute;
+                    z-index: 2;
+                    background: none;
+                    border: none;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    cursor: pointer;
+
+                    &.prev {
+                        left: 0;
+                    }
+                    &.next {
+                        right: 0;
+                    }
+                }
+            }
+            
+            &__img-four {
+                position: relative;
+                width: 540px;
+                height: 100%;
+
+                &>ul {
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                }
+
+                &-item {
+                    position: absolute;
+                    inset: 0;
+                    opacity: 0;
+                    transition: 0.9s;
+
+                    &>img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        object-position: center;
+                    }
+                }
+
+                &-item[data-active] {
+                    opacity: 1;
+                    z-index: 1;
+                    transition-delay: 0ms;
+                }
+
+                &-btn {
+                    position: absolute;
+                    z-index: 2;
+                    background: none;
+                    border: none;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    cursor: pointer;
+
+                    &.prev {
+                        left: 0;
+                    }
+                    &.next {
+                        right: 0;
+                    }
+                }
+            }   
         }
-
     }
 }
