--- a/src/scss/blocks/_hotel.scss
+++ b/src/scss/blocks/_hotel.scss
@@ -57,6 +57,56 @@
         display: flex;
         justify-content: space-between;
 
+        &__img {
+            position: relative;
+            width: 540px;
+            height: 455px;
+
+            &>div {
+                margin: 0;
+                padding: 0;
+                list-style: none;
+            }
+
+            &-item {
+                position: absolute;
+                inset: 0;
+                opacity: 0;
+                transition: 0.9s;
+
+                &>img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                }
+            }
+
+            &-item[data-active] {
+                opacity: 1;
+                z-index: 1;
+                transition-delay: 0ms;
+            }
+
+            &-btn {
+                position: absolute;
+                z-index: 2;
+                background: none;
+                border: none;
+                margin-top: 40%;
+                transform: translateY(-50%);
+                cursor: pointer;
+
+                &.prev {
+                    left: 0;
+                }
+                &.next {
+                    right: 0;
+                }
+            }
+        }
+
         &__text {
             text-align: center;
             margin-top: 100px;
