--- a/src/scss/blocks/_seventh.scss
+++ b/src/scss/blocks/_seventh.scss
@@ -45,6 +45,7 @@
         margin-top: 74px;
         display: flex;
         width: 100%;
+        height: 455px;
         background: rgba(191, 219, 247, 0.2);
 
         &-text {
@@ -106,11 +107,60 @@
                 color: $rgba-c;
             }
         }
+
+        &-img {
+            position: relative;
+            width: 540px;
+            height: 100%;
+
+            &>div {
+                width: 100%;
+            }
+
+            &-item {
+                position: absolute;
+                inset: 0;
+                opacity: 0;
+                transition: 0.9s;
+
+                &>img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                }
+            }
+
+            &-item[data-active] {
+                opacity: 1;
+                z-index: 1;
+                transition-delay: 0ms;
+            }
+
+            &-btn {
+                position: absolute;
+                z-index: 2;
+                background: none;
+                border: none;
+                top: 50%;
+                transform: translateY(-50%);
+                cursor: pointer;
+
+                &.prev {
+                    left: 0;
+                }
+                &.next {
+                    right: 0;
+                }
+            }
+        }
     }
 
     &__terrace {
         margin-top: 74px;
         display: flex;
+        justify-content: space-between;
         width: 100%;
 
         &-text {
@@ -173,7 +223,50 @@
         }
 
         &-img {
-            margin-left: 40px;
+            position: relative;
+            width: 540px;
+            height: 100%;
+
+            &>div {
+                width: 100%;
+            }
+
+            &-item {
+                position: absolute;
+                inset: 0;
+                opacity: 0;
+                transition: 0.9s;
+
+                &>img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                }
+            }
+
+            &-item[data-active] {
+                opacity: 1;
+                z-index: 1;
+            }
+
+            &-btn {
+                position: absolute;
+                z-index: 2;
+                background: none;
+                border: none;
+                margin-top: 40%;
+                transform: translateY(-50%);
+                cursor: pointer;
+
+                &.prev {
+                    left: 0;
+                }
+                &.next {
+                    right: 0;
+                }
+            }
         }
     }
 }
