--- a/src/scss/blocks/_tab.scss
+++ b/src/scss/blocks/_tab.scss
@@ -30,6 +30,82 @@
         }
     }
 
+    &-slide {
+        position: relative;
+        display: none;
+        width: 1260px;
+        margin-top: 40px;
+        margin-right: 0;
+        background: rgba(191, 219, 247, 0.2);
+
+        &__img {
+            width: 100%;
+            height: 538px;
+        }
+
+        &__items {
+            position: absolute;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            inset: 0;
+            opacity: 0;
+            transition: 0.7s;
+
+            &>img {
+                display: block;
+                width: 538px;
+                object-fit: cover;
+                object-position: center;
+            }
+
+            &-text {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                height: 157px;
+                justify-content: space-between;
+                margin: auto;
+
+                &>p {
+                    font-family: $ff;
+                    font-weight: 400;
+                    font-size: 20px;
+                    line-height: 150%;
+                    text-align: center;
+                    letter-spacing: $lc;
+                    color: $rgba-c;
+                }
+            }
+        }
+
+        &__items[data-active] {
+            opacity: 1;
+            z-index: 1;
+        }
+
+        &__btn {
+            position: absolute;
+            z-index: 2;
+            background: none;
+            border: none;
+            top: 55%;
+            transform: translateY(-50%);
+            cursor: pointer;
+
+            &.prev {
+                left: 0;
+            }
+            &.next {
+                right: 6em;
+            }
+        }
+    }
+
+    &-slides--active {
+        display: flex;
+    }
+
     &__tabs {
         margin-top: 50px;
         display: flex;
@@ -84,6 +160,7 @@
                 transition: 0.7s;
             }
 
+            
             // &__block:target {
             //     display: flex;
             // }
